--- a/index.html
+++ b/index.html
@@ -12,19 +12,19 @@
     <!-- Reproductores de audio HTML5 -->
     <p>Audio 1</p>
     <audio controls>
-        <source src="1.mp3" type="audio/mp3">
+        <source src="1.wav" type="audio/mp3">
         Tu navegador no soporta el elemento de audio.
     </audio>
 
     <p>Audio 2</p>
     <audio controls>
-        <source src="2.mp3" type="audio/mp3">
+        <source src="2.wav" type="audio/mp3">
         Tu navegador no soporta el elemento de audio.
     </audio>
 
     <p>Audio 3</p>
     <audio controls>
-        <source src="3.mp3" type="audio/mp3">
+        <source src="3.wav.wav" type="audio/mp3">
         Tu navegador no soporta el elemento de audio.
     </audio>
 
